--- a/manifest.json
+++ b/manifest.json
@@ -2958,6 +2958,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/downloadable-icon2.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/downloadable-icon2.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/ds-dns-example.png",
       "output": {
         "resource": {
@@ -6676,6 +6687,39 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/upgrade-clone-env.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/upgrade-clone-env.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/upgrade-customize-template.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/upgrade-customize-template.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/upgrade-rebuild-env.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/upgrade-rebuild-env.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/use-git-deploy.png",
       "output": {
         "resource": {
@@ -7530,6 +7574,11 @@
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
         "RestApiDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
@@ -7541,11 +7590,6 @@
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
-          "incrementalPhase": "build"
-        },
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         }
       }
