--- a/manifest.json
+++ b/manifest.json
@@ -1134,12 +1134,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/components-products.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/components-products.html",
-          "hash": "96T2cCODHQ/c/CyX/R99DQ=="
+          "hash": "2FvGM2VfDzLbZNQoNsDZkg=="
         }
       },
       "is_incremental": false,
@@ -2067,17 +2070,6 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/components-and-products-artifactorykey.png",
-      "output": {
-        "resource": {
-          "relative_path": "home/techguides/images/components-and-products-artifactorykey.png"
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Resource",
       "source_relative_path": "home/techguides/images/components-and-products-artifactoryurl.png",
       "output": {
         "resource": {
@@ -2093,17 +2085,6 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/components-and-products-localcompomentpath.png"
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Resource",
-      "source_relative_path": "home/techguides/images/components-and-products-uploadurl.png",
-      "output": {
-        "resource": {
-          "relative_path": "home/techguides/images/components-and-products-uploadurl.png"
         }
       },
       "is_incremental": false,
@@ -7574,6 +7555,10 @@
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
+        "ManagedReferenceDocumentProcessor": {
+          "can_incremental": false,
+          "incrementalPhase": "build"
+        },
         "ResourceDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
@@ -7585,10 +7570,6 @@
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
-          "can_incremental": false,
-          "incrementalPhase": "build"
-        },
-        "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build"
         }
